environments/gloo-edge/gateway-api/ai-gateway/edge.glooplatform.com/ai-gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ai-gateway-https
  namespace: ai-gateway
  labels:
    example: ai-gateway-route
    gateway: https
spec:
  hostnames:
  - "ai-gateway.edge.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - group: gloo.solo.io
          kind: Upstream
          name: openai
      matches:
        - path:
            type: PathPrefix
            value: /openai
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: openai-route-policies
    - backendRefs:
        - group: gloo.solo.io
          kind: Upstream
          name: gemini
      matches:
        - path:
            type: PathPrefix
            value: /gemini
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: gemini-route-policies
